--- a/10_Koffer_Packen/CMakeLists.txt
+++ b/10_Koffer_Packen/CMakeLists.txt
@@ -1,1 +1,11 @@
+cmake_minimum_required(VERSION 3.20.0)
+project(main VERSION 0.1.0)
 
+include(CTest)
+enable_testing()
+
+add_executable(main src/main.cpp src/koffer.cpp src/packstueck.cpp)
+
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
