--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/allmightychaos/12_Snake
 [submodule "08_Rekursionen"]
 	path = 08_Rekursionen
-	url = ./08_Rekursionen
+	url = https://github.com/allmightychaos/08_Rekursionen
